syntax="proto3";

option go_package="protos/DriverProtos";

service DriverService{
    rpc UpdateOrder(OrderDetails) returns (OrderResponse); 
    rpc UpdateDriverLocation(DriverDetails) returns (DriverResponse); 
    rpc AddDriverLocation(DriverDetails) returns (DriverResponse); 
    rpc SearchForDrivers(DriverSearch) returns (SearchResponse);
}

message OrderDetails{
    string driverId=1; 
    string orderId=2; 
}

message OrderResponse{
    string message=1;
}

message DriverDetails{
    string driverId=1;
    float latitude =2;
    float longitude=3;
}

message DriverResponse{
    string driverId=1;
    string status=2;
}

message DriverSearch{
    float latitude =1;
    float longitude=2;
    int64 limit=3;
    string orderId=4;
}

message SearchResponse{
    bytes driverLocations=1;
}

